--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -23,30 +23,15 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>    <script src="/js/script.js"></script>
 
 
-    {{!-- <footer class="footer-seccion spaceBotton">
-      <div class="footerCompleto">
-        <div class="contenedor-footer">
-            <nav class="navegacion"> 
-              <a href="contactus.html">Contact Us</a>
-              <a href="services.html">Our Services</a>
-              <a href="privacy.html">Privacy Policy</a>
-              <a href="terms.html">Terms & Conditions</a>
-            </nav>
-        </div>
-        <p class="copyright"> All rights reserved 2023 &copy;</p>
-      </div>
-  </footer> --}}
 
-
-  <footer class="text-muted py-5">
+  <footer class="footerCompleto">
   <div class="container">
-    <p class="float-end mb-1">
-      <a href="#">Back to top</a>
-    </p>
-    <p class="mb-1">Album example is &copy; Bootstrap, but please download and customize it for yourself!</p>
-    <p class="mb-0">New to Bootstrap? <a href="/">Visit the homepage</a> or read our <a href="../getting-started/introduction/">getting started guide</a>.</p>
+     <p class="float-end mb-1"> <a href="#">Back to top</a></p>
+    <p class="p1">Pawtopia&copy; its a project designed by Diego Zermeño & Fernanda Echeverría</p>
+    <p class="p2">New in Pawtopia?<a href="/">Visit the homepage</a> </p>
+    
   </div>
-</footer>
+  </footer>
 
   </body>
 
