--- a/public/stylesheets/footer.css
+++ b/public/stylesheets/footer.css
@@ -1,30 +1,11 @@
 
-.footer-seccion{
-    bottom: 0;
-    position: fixed;
-    width: 100vw;
-}
-
 .footerCompleto{
     background: rgb(69,179,252);
     background: linear-gradient(90deg, rgba(69,179,252,1) 5%, rgba(212,29,253,0.4601739621629902) 51%, rgba(69,179,252,0.35933362602853647) 93%);
-    display: flex;
-    justify-content: left;
-    width: 100vw;
-    height: 50px;
+    text-align: left;
     font-family: 'Comfortaa', sans-serif;
+    font-weight: bold;
+    width: 100vw;
+    height: 15vh;
 
-}
-
-.copyright{
-    display: flex;
-    color: black;
-
-
-    padding: 16px;
-    margin: 15px;
-}
-
-h1{
-    text-align: center;
 }
