--- a/public/stylesheets/navegacion.css
+++ b/public/stylesheets/navegacion.css
@@ -10,7 +10,7 @@
 
 .navegacion-principal {
   background: rgb(235,185,240);
-background: linear-gradient(90deg, rgba(235,185,240,1) 10%, rgba(158,241,104,1) 50%, rgba(237,165,236,1) 90%);
+  background: linear-gradient(90deg, rgba(235,185,240,1) 10%, rgba(158,241,104,1) 50%, rgba(237,165,236,1) 90%);
   display: flex;
   justify-content: space-evenly;
   align-items: center;
@@ -19,22 +19,6 @@ background: linear-gradient(90deg, rgba(235,185,240,1) 10%, rgba(158,241,104,1) 
   font-family: 'Comfortaa', sans-serif;
   text-decoration: none;
 }
-
-.contenedor-seccion{
-  display: flex;
-  background-image: url(../images/fondoHeader.jpg);
-  background-size: cover;
-  height: 35%;
-  position: relative;
-  align-items: center;
-  width: 100vw;
-  /* height: 35%;
-  width: 100%;
-  position: relative;
-  margin: 0 auto
-  */
-} 
-
 h1 {
   text-align: center;
   padding-top: 0px;
@@ -44,8 +28,9 @@ h1 {
   font-size: 500px;
 }
 @media (max-with: 1140px){
-  .contenedor-seccion{
+  .body{
     height: 35vh;
     max-width: 1100px;
   }
+
 }
