Se actualizaron todos los botones para ajustar los redireccionamientos, falta darle algunos estilos a el boton de home, esta pendiente el poder modificar los productos y el poder borrarlos :construction:

--- a/public/stylesheets/index.css
+++ b/public/stylesheets/index.css
@@ -48,3 +48,15 @@ a{
 p{
   font-size: 15px;
 }
+
+.faviconProfile{
+  border-radius: 50px;
+}
+
+.nameUserInSession{
+  text-decoration: none;
+}
+
+.btnHome{
+  text-decoration: none;
+}
