--- a/views/products/cats.hbs
+++ b/views/products/cats.hbs
@@ -68,7 +68,7 @@
   <body>
     {{!-- Navegacion --}}
   <nav class="navegacion-principal"> 
-              {{#unless userInSession}}
+              {{#if userInSession}}
               <a href="/auth/login">
                 <button class="btn btn-primary login" style="background-color: rgb(69,179,252);
                 background: linear-gradient(90deg, rgba(69,179,252,1) 5%, rgba(212,29,253,0.4601739621629902) 51%, rgba(69,179,252,0.35933362602853647) 93%);border: none;"> 
@@ -76,10 +76,9 @@
                   Login
                 </button>
               </a>
-              {{/unless}}
+              {{/if}}
 
-              {{!-- Boton Logout --}}
-              {{#unless userInSession}}
+              {{#if userInSession}}
               <a href="/auth/signup">
                 <button class="btn btn-primary spa"style="background-color: rgb(69,179,252);
                 background: linear-gradient(90deg, rgba(69,179,252,1) 5%, rgba(212,29,253,0.4601739621629902) 51%, rgba(69,179,252,0.35933362602853647) 93%);border: none;"> 
@@ -87,10 +86,10 @@
                   Signup
                 </button>
               </a>
-              {{/unless}}
+              {{/if}}
 
               {{!-- Boton Logout --}}
-              {{#if userInSession}}
+              {{#unless userInSession}}
               <a href="/auth/logout">
                 <button class="btn btn-primary logout"style="background-color: rgb(69,179,252);
                 background: linear-gradient(90deg, rgba(69,179,252,1) 5%, rgba(212,29,253,0.4601739621629902) 51%, rgba(69,179,252,0.35933362602853647) 93%); border: none;"> 
@@ -98,7 +97,7 @@
                   Logout
                 </button>
               </a>
-              {{/if}}
+              {{/unless}}
               {{!-- Boton Cats --}}
               <a href="/products/cats">
                 <button class="btn btn-primary cats"style="background-color:  rgb(69,179,252);
@@ -125,7 +124,7 @@
                 </button>
               </a>
               {{/if}}
-
+              {{!-- Boton Spa --}}
               {{#if userInSession}}
               <a href="/profile/{{userInSession._id}}">
                 <img src="{{userInSession.photo}}" width="30" height="30"/>
@@ -133,13 +132,10 @@
               </a>
               {{/if}}
 
-               <a href="/">
-                <img src="{{userInSession.photo}}" width="30" height="30"/>
-                <strong>{{userInSession.name}}</strong>
+               <a class="btnHome" href="/">
+                <strong>Home</strong>
               </a>
           </nav>
-
-
 <main>
 
   <section class="py-5 text-center container">
