--- a/views/auth/login.hbs
+++ b/views/auth/login.hbs
@@ -1,4 +1,13 @@
- <header class="header-inicio">
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Document</title>
+</head>
+<body>
+   <header class="header-inicio">
     <div class="contenedor-header">
       <div class="barra">
         </div>
@@ -23,9 +32,12 @@
         </section>
 
     <button type="submit">Log In</button>
-
+    
     {{#if errorMessage}}
       <p class="error">{{errorMessage}}</p>
     {{/if}}
   </form>
 </div>
+
+</body>
+</html>
