--- a/views/products/cats.hbs
+++ b/views/products/cats.hbs
@@ -166,7 +166,11 @@
               <p class="card-text"name="price"> <strong> Price:</strong> $100</p>
               <p class="card-text" name="description"> <strong>Description:</strong>  Provides delicious, breakthrough weight management nutrition .</p>
               <p class="card-text" name="category"><strong>Category: </strong> Food.</p>
-              <p class="card-text"><strong>Quantity: </strong> <input type="number" name="quantity" min="1" max="5"></p>
+              <p class="card-text"><strong>Quantity: </strong> <input type="number"; name="quantity"; min="1"; max="5"; size="5px"></p>
+{{!--  --}}
+
+
+{{!--  --}}
               <div class="d-flex justify-content-between align-items-center">
                 <div class="btn-group">
                   <button type="button" class="btn btn-sm btn-outline-secondary">Add to cart</button>
@@ -224,13 +228,6 @@
 
         
 
-        
-
-      
-
-      
-
-       
 
       </div>
     </div>
