--- a/views/index.hbs
+++ b/views/index.hbs
@@ -138,7 +138,7 @@
   </div>
 
    {{!-- Seccion 2 tarjetas --}}
-   <img alt="dogToys" class="img-banner" style="width: 100vw; height: 65vh; display: block;" src="/images/banner2.jpg">
+   <img alt="dogToys" class="img-banner" style="width: 100vw; height: 40vh; display: block;" src="/images/banner2.jpg">
     <div class="titlesIndex">
 
     <h3>Dog Toys</h3>
@@ -360,5 +360,6 @@
       </div>
     </div>
   </div>
+     <img alt="dogFood" class="img-banner" style="width: 100vw; height:25vh;  display: block;" src="/images/bannerfinal.jpg">
 </body>
 </html>
