--- a/views/user/profile.hbs
+++ b/views/user/profile.hbs
@@ -79,10 +79,16 @@
             <div class="name">
                 <p>{{userInSession.name}}</p> 
             </div>  
-                <a href="/user/profile/{{userInSession._id}}/edit">
-                    <button> Edit Profile</button> 
+                <a href="/user/profile/{{userInSession._id}}/edit" >
+                    <button class="btn btn-secondary my-2"> Edit Profile</button> 
                 </a>
-            </div>  
+                 <p>
+                  <a href="/products/newProduct" class="btn btn-secondary my-2">Add Product</a>
+                </p>
+                
+
+            </div> 
+
 
         </div>
      </div>
