--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,19 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <pngnk rel="preconnect" href="https://fonts.googleapis.com">
-  <pngnk rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <pngnk rel="stylesheet" type="text/css" href="/stylesheets/index.css">
-  <pngnk rel="stylesheet" type="text/css" href="/stylesheets/navegacion.css">
+  <link rel="stylesheet" type="text/css" href="/stylesheets/index.css">
+  <link rel="stylesheet" type="text/css" href="/stylesheets/navegacion.css">
 </head>
 <body>
   {{!--Titulo principal --}}
   <header>
     
-  <h1><img src="images/pawtopia.png" alt="Logo" width="190" height="180">  Welcome To Pawtopia   &#128062;</h1>
+  <h1><img src="/images/pawtopia.png" alt="Logo" width="190" height="180">  Welcome To Pawtopia   &#128062;</h1>
 
   </header>
 {{!-- Navegacion --}}
@@ -243,7 +243,7 @@
 
   <div class="tarjetas">
     <div class="card" style="width: 18rem;" class="grid gap-0 row-gap-3">
-      <img src="images/comida1.1.jpg" class="card-img-top" alt="...">
+      <img src="/images/comida1.1.jpg" class="card-img-top" alt="...">
       <div class="card-body">
         <h5 class="card-title">Black Hawk Grain Free Chicken & Lamb Wet Cat Food 1.5kg</h5>
         <p>Ingredients: Chicken Meal, Rice, Vegetable Protein, Oats, 
@@ -274,7 +274,7 @@
     </div>
 {{!-- juguete 3 --}}
     <div class="card" style="width: 18rem;">
-      <img src="images/comida1.3.png" class="card-img-top" alt="...">
+      <img src="/images/comida1.3.png" class="card-img-top" alt="...">
       <div class="card-body">
         <h5 class="card-title">Black Hawk Original Chicken Dry Cat Food - 1.5kg</h5>
         <p class="card-text">Ingredients: Rosemary Extract, Vitamin C), Beet Pulp, Canola Oil, Salt, Egg Powder, Chicory Root, Flaxseed, Fish Oil, Pumpkin Seed Powder, Alfalfa, Probiotic (Bacillus Coagulant), Natural Antioxidants, Coconut Oil, Yoghurt Powder, Emu Oil, Blueberries, Cranberries, Rosemary, Essential Vitamins & Minerals.</p>
@@ -285,7 +285,7 @@
     </div>
 {{!-- juguete 4 --}}
     <div class="card" style="width: 18rem;">
-      <img src="images/comida1.4.png" class="card-img-top" alt="...">
+      <img src="/images/comida1.4.png" class="card-img-top" alt="...">
       <div class="card-body">
         <h5 class="card-title">Black Hawk Grain Free Adult Chicken, Duck & Fish</h5>
         <p>Ingredients: Duck, Peas, Chicken Broth,
@@ -309,7 +309,7 @@
     </div>
   <div class="tarjetas spaceBottom" >
     <div class="card" style="width: 18rem;" class="grid gap-0 row-gap-3 column-gap-3">
-      <img src="images/dog1.1.jpg" class="card-img-top" alt="...">
+      <img src="/images/dog1.1.jpg" class="card-img-top" alt="...">
       <div class="card-body">
         <h5 class="card-title">Black Hawk Large Breed Adult Chicken & Rice Dry Dog Food 20kg</h5>
         <p class="card-text">Ingredients: Lamb Meat Meal, Beef Meat Meal, Oats, 
@@ -321,7 +321,7 @@
       </div>
     </div>
     <div class="card" style="width: 18rem;">
-      <img src="images/dog1.2.jpg" class="card-img-top" alt="...">
+      <img src="/images/dog1.2.jpg" class="card-img-top" alt="...">
       <div class="card-body">
         <h5 class="card-title">Black Hawk Grain Free Chicken Dry Dog Food 15kg</h5>
         <p class="card-text">Ingredients: Chicken Meal, Field Peas,
@@ -334,7 +334,7 @@
       </div>
     </div>
     <div class="card" style="width: 18rem;">
-      <img src="images/dog1.3.jpg" class="card-img-top" alt="...">
+      <img src="/images/dog1.3.jpg" class="card-img-top" alt="...">
       <div class="card-body">
         <h5 class="card-title">Black Hawk Dry Dog Food for Adult Working Dogs with Lamb and Beef - 20kg</h5>
         <p>Ingredients: Chicken Meal, Ground Brown Rice, Ground Oats,
@@ -347,7 +347,7 @@
       </div>
     </div>
     <div class="card" style="width: 18rem;">
-      <img src="images/dog1.4.jpg" class="card-img-top" alt="...">
+      <img src="/images/dog1.4.jpg" class="card-img-top" alt="...">
       <div class="card-body">
         <h5 class="card-title">Advance Puppy</h5>
         <p>Ingredients: Chicken Meal; Maize Gluten; Chicken Fat; Sorghum; 
