--- a/views/auth/login.hbs
+++ b/views/auth/login.hbs
@@ -38,6 +38,7 @@
     {{/if}}
   </form>
 </div>
-
+<img alt="dogFood" class="img-banner" style="width: 100vw; height: 55vh;  display: block;" src="/images/bannerfinal2.png">
+<img alt="dogFood" class="img-banner" style="width: 100vw; height: 55vh;  display: block;" src="/images/banner3final.png">
 </body>
 </html>
