CRUD completo finalizado

--- a/public/stylesheets/index.css
+++ b/public/stylesheets/index.css
@@ -60,3 +60,14 @@ p{
 .btnHome{
   text-decoration: none;
 }
+
+.formDelete{
+  padding: 0;
+  width: 55px;
+}
+
+.divDelete{
+  display: flex;
+  flex-direction: row;
+  margin: 3px;
+}
