--- a/views/products/cats.hbs
+++ b/views/products/cats.hbs
@@ -78,7 +78,7 @@
               </a>
               {{/if}}
 
-              {{#unless userInSession}}
+              {{#if userInSession}}
               <a href="/auth/signup">
                 <button class="btn btn-primary spa"style="background-color: rgb(69,179,252);
                 background: linear-gradient(90deg, rgba(69,179,252,1) 5%, rgba(212,29,253,0.4601739621629902) 51%, rgba(69,179,252,0.35933362602853647) 93%);border: none;"> 
@@ -86,7 +86,7 @@
                   Signup
                 </button>
               </a>
-              {{/unless}}
+              {{/if}}
 
               {{!-- Boton Logout --}}
               {{#unless userInSession}}
@@ -143,7 +143,6 @@
       <div class="col-lg-6 col-md-8 mx-auto">
         <h1 class="fw-light">Products for cats</h1>
         <p class="lead text-muted">Cat Food and Supplies</p>
-       
       </div>
     </div>
   </section>
@@ -154,29 +153,41 @@
     <img src="{{photo}}" class="card-img-top" alt="...">
     <div class="card-body">
       <h5 class="card-title">{{name}}</h5>
-      <p class="card-text">{{description}}</p>
-      <p class="card-text">{{quantity}}</p>
-      <a href="#" class="btn btn-primary">Add to cart</a>
-      {{#if ../admin}}
-      <a href="#" class="btn btn-dark"> 
-        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor" class="bi bi-pencil-fill" viewBox="0 0 16 16">
-          <path d="M12.854.146a.5.5 0 0 0-.707 0L10.5 1.793 14.207 5.5l1.647-1.646a.5.5 0 0 0 0-.708l-3-3zm.646 6.061L9.793 2.5 3.293 9H3.5a.5.5 0 0 1 .5.5v.5h.5a.5.5 0 0 1 .5.5v.5h.5a.5.5 0 0 1 .5.5v.5h.5a.5.5 0 0 1 .5.5v.207l6.5-6.5zm-7.468 7.468A.5.5 0 0 1 6 13.5V13h-.5a.5.5 0 0 1-.5-.5V12h-.5a.5.5 0 0 1-.5-.5V11h-.5a.5.5 0 0 1-.5-.5V10h-.5a.499.499 0 0 1-.175-.032l-.179.178a.5.5 0 0 0-.11.168l-2 5a.5.5 0 0 0 .65.65l5-2a.5.5 0 0 0 .168-.11l.178-.178z"/>
-        </svg>         
-       </a>
-         <a href="#" class="btn btn-danger"> 
-          <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor" class="bi bi-trash3" viewBox="0 0 16 16">
-            <path d="M6.5 1h3a.5.5 0 0 1 .5.5v1H6v-1a.5.5 0 0 1 .5-.5ZM11 2.5v-1A1.5 1.5 0 0 0 9.5 0h-3A1.5 1.5 0 0 0 5 1.5v1H2.506a.58.58 0 0 0-.01 0H1.5a.5.5 0 0 0 0 1h.538l.853 10.66A2 2 0 0 0 4.885 16h6.23a2 2 0 0 0 1.994-1.84l.853-10.66h.538a.5.5 0 0 0 0-1h-.995a.59.59 0 0 0-.01 0H11Zm1.958 1-.846 10.58a1 1 0 0 1-.997.92h-6.23a1 1 0 0 1-.997-.92L3.042 3.5h9.916Zm-7.487 1a.5.5 0 0 1 .528.47l.5 8.5a.5.5 0 0 1-.998.06L5 5.03a.5.5 0 0 1 .47-.53Zm5.058 0a.5.5 0 0 1 .47.53l-.5 8.5a.5.5 0 1 1-.998-.06l.5-8.5a.5.5 0 0 1 .528-.47ZM8 4.5a.5.5 0 0 1 .5.5v8.5a.5.5 0 0 1-1 0V5a.5.5 0 0 1 .5-.5Z"/>
-          </svg>       
-        </a>  
+      <p class="card-text"><strong>Price:</strong> {{price}}</p>
+      <p class="card-text"><strong>Description:</strong> {{description}}</p>
+      <p class="card-text"><strong> Quantity:</strong> {{quantity}}</p>
+      <p class="card-text"><strong> Category:</strong> {{category}}</p>
+      <div class="divDelete">
+        <div>
+          <a href="#" class="btn btn-primary">Add to cart</a>
+        </div>
+        {{#if ../admin}}
+        <div>
+        <a  href="editProduct/{{id}}" class="btn btn-dark"> 
+          <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor" class="bi bi-pencil-fill" viewBox="0 0 16 16">
+            <path d="M12.854.146a.5.5 0 0 0-.707 0L10.5 1.793 14.207 5.5l1.647-1.646a.5.5 0 0 0 0-.708l-3-3zm.646 6.061L9.793 2.5 3.293 9H3.5a.5.5 0 0 1 .5.5v.5h.5a.5.5 0 0 1 .5.5v.5h.5a.5.5 0 0 1 .5.5v.5h.5a.5.5 0 0 1 .5.5v.207l6.5-6.5zm-7.468 7.468A.5.5 0 0 1 6 13.5V13h-.5a.5.5 0 0 1-.5-.5V12h-.5a.5.5 0 0 1-.5-.5V11h-.5a.5.5 0 0 1-.5-.5V10h-.5a.499.499 0 0 1-.175-.032l-.179.178a.5.5 0 0 0-.11.168l-2 5a.5.5 0 0 0 .65.65l5-2a.5.5 0 0 0 .168-.11l.178-.178z"/>
+          </svg>         
+        </a>
+        </div>
+      
+        <div>
+          <button class="btn btn-danger" onclick="deleteProduct(this)" id="{{id}}"> 
+              <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor" class="bi bi-trash3" viewBox="0 0 16 16">
+                <path d="M6.5 1h3a.5.5 0 0 1 .5.5v1H6v-1a.5.5 0 0 1 .5-.5ZM11 2.5v-1A1.5 1.5 0 0 0 9.5 0h-3A1.5 1.5 0 0 0 5 1.5v1H2.506a.58.58 0 0 0-.01 0H1.5a.5.5 0 0 0 0 1h.538l.853 10.66A2 2 0 0 0 4.885 16h6.23a2 2 0 0 0 1.994-1.84l.853-10.66h.538a.5.5 0 0 0 0-1h-.995a.59.59 0 0 0-.01 0H11Zm1.958 1-.846 10.58a1 1 0 0 1-.997.92h-6.23a1 1 0 0 1-.997-.92L3.042 3.5h9.916Zm-7.487 1a.5.5 0 0 1 .528.47l.5 8.5a.5.5 0 0 1-.998.06L5 5.03a.5.5 0 0 1 .47-.53Zm5.058 0a.5.5 0 0 1 .47.53l-.5 8.5a.5.5 0 1 1-.998-.06l.5-8.5a.5.5 0 0 1 .528-.47ZM8 4.5a.5.5 0 0 1 .5.5v8.5a.5.5 0 0 1-1 0V5a.5.5 0 0 1 .5-.5Z"/>
+              </svg> 
+            </button>
+      
+        </div>
+      </div>
         {{/if}}
-
     </div>
   </div>
   {{/each}}
 </div>
 
 </main>
-    <script src="../assets/dist/js/bootstrap.bundle.min.js"></script>
+  <script src="/js/confirmationDelete.js"></script>
+  <script src="../assets/dist/js/bootstrap.bundle.min.js"></script>
     
   </body>
 </html>
