--- a/views/user/profile.hbs
+++ b/views/user/profile.hbs
@@ -115,7 +115,7 @@
                         <tr>
                             <td>Birth Day:</td>
                             <td></td>
-                            <td>{{userInSession.birthDay}}</td>
+                            <td>{{ formatoFecha userInSession.birthDay}}</td>
                         </tr>
                         <tr>
                             <td>Phone:</td>
