--- a/views/auth/signup.hbs
+++ b/views/auth/signup.hbs
@@ -1,4 +1,13 @@
- <header class="header-inicio">
+ <!DOCTYPE html>
+ <html lang="en">
+ <head>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Document</title>
+ </head>
+ <body>
+  <header class="header-inicio">
     <div class="contenedor-header">
       <div class="barra">
         </div>
@@ -89,5 +98,8 @@
       {{/if}}
 
     </form>
-  </div>
-      
+    </div>
+    
+         <img alt="dogToys" class="img-banner" style="width: 100vw; height: 60vh; display: block;" src="/images/bannerfinal2.png">
+ </body>
+ </html>
