--- a/views/products/cats.hbs
+++ b/views/products/cats.hbs
@@ -89,7 +89,7 @@
               {{/if}}
 
               {{!-- Boton Logout --}}
-              {{#unless userInSession}}
+              {{#if userInSession}}
               <a href="/auth/logout">
                 <button class="btn btn-primary logout"style="background-color: rgb(69,179,252);
                 background: linear-gradient(90deg, rgba(69,179,252,1) 5%, rgba(212,29,253,0.4601739621629902) 51%, rgba(69,179,252,0.35933362602853647) 93%); border: none;"> 
@@ -97,7 +97,7 @@
                   Logout
                 </button>
               </a>
-              {{/unless}}
+              {{/if}}
               {{!-- Boton Cats --}}
               <a href="/products/cats">
                 <button class="btn btn-primary cats"style="background-color:  rgb(69,179,252);
@@ -160,6 +160,7 @@
         <p class="card-text"><strong> Quantity:</strong> {{quantity}}</p>
         <p class="card-text"><strong> Category:</strong> {{category}}</p>
         <div class="divDelete">
+          
           <div>
             <a href="#" class="btn btn-primary">Add to cart</a>
           </div>
@@ -180,8 +181,8 @@
               </button>
         
           </div>
-        </div>
           {{/if}}
+        </div>
       </div>
     </div>
     {{/each}}
